--- a/Pipfile
+++ b/Pipfile
@@ -6,18 +6,18 @@ verify_ssl = false
 
 [packages]
 
-"jinja2" = "==2.10"
-aiohttp = "==3.0.7"
+"jinja2" = "==2.10.3"
+aiohttp = "==3.6.2"
 "prometheus-async[aiohttp]" = "*"
 
 
 [dev-packages]
 
-pytest = "==3.3.1"
+pytest = "*"
 pytest-aiohttp = "*"
 "flake8" = "*"
 
 
 [requires]
 
-python_version = "3.6"
+python_version = "3.8"
